// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FamilyBadge case horizontal: should render with the right height and width 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/catalogue/123"
>
  <styled.div
    width={490}
  >
    <styled.img
      alt="alt1"
      height={235}
      src="image"
      width={490}
    />
    <styled.div>
      <styled.div>
        family
      </styled.div>
    </styled.div>
  </styled.div>
</Link>
`;

exports[`FamilyBadge case square-big: should render with the right height and width 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/catalogue/123"
>
  <styled.div
    width={490}
  >
    <styled.img
      alt="alt1"
      height={561}
      src="image"
      width={490}
    />
    <styled.div>
      <styled.div>
        family
      </styled.div>
    </styled.div>
  </styled.div>
</Link>
`;

exports[`FamilyBadge case square-small: should render with the right height and width 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/catalogue/123"
>
  <styled.div
    width={235}
  >
    <styled.img
      alt="alt1"
      height={235}
      src="image"
      width={235}
    />
    <styled.div>
      <styled.div>
        family
      </styled.div>
    </styled.div>
  </styled.div>
</Link>
`;

exports[`FamilyBadge case wrong prop: should render with default height and width 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/catalogue/123"
>
  <styled.div
    width={490}
  >
    <styled.img
      alt="alt1"
      height={235}
      src="image"
      width={490}
    />
    <styled.div>
      <styled.div>
        family
      </styled.div>
    </styled.div>
  </styled.div>
</Link>
`;
